# hero2vec

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
cmds/: check.sh
dota2models/model/: hero2vec.py
hero2vec/model/: hero2vec.py  hero2vec_keras.py
notebooks/: embeddings_visualization.ipynb  filtered_dataset.ipynb
