[tool.poetry]
name = "dota2-models"
version = "0.1.0"
description = "Learning dota2 hero embeddings from matches"
authors = ["Anton Barkovsky <anton@swarmer.me>"]
license = "MIT"
packages = [
    { include = "dota2models" },
]

[tool.poetry.dependencies]
python = "3.6.*"
tensorflow = "^1.12"
numpy = "^1.15"
scipy = "^1.2"
matplotlib = "^3.0"
seaborn = "^0.9.0"
pandas = "^0.23.4"
tfkmodel = {path = "../tfkmodel/"}
dota2api = "^1.3"

[tool.poetry.dev-dependencies]
pudb = "^2018.1"
ipython = "^7.2"
mypy = "^0.650.0"
pylint = "^2.2"
jupyter = "^1.0"
jupyterlab = "^0.35.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
